# RAG

./: .gitignore  README.md  config.py  config_metrics.py  db_engine.py  embeddig_model.py  main_pipe.py  metrics.py  preprocessing.py  pyproject.toml  saving_model.py
